integración del módulo de respuestas al módulo de inspecciones - API
