# storage/api-docs/api-docs.json
@@ -794,6 +794,47 @@
                 ]
             }
         },
+        "/inspections/{inspection}/answers": {
+            "get": {
+                "tags": [
+                    "Respuestas"
+                ],
+                "summary": "Listado de respuestas asociadas a una inspección",
+                "operationId": "App\\Http\\Controllers\\Api\\Inspection\\InspectionAnswerController::index",
+                "parameters": [
+                    {
+                        "name": "inspection",
+                        "in": "path",
+                        "description": "Id de la inspección",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Muestra el listado de respuestas asociadas a una inspección.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Id no encontrado."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/inspections/{id}": {
             "get": {
                 "tags": [
@@ -970,6 +1011,70 @@
                     },
                     "422": {
                         "description": "Entidad no procesable."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/inspections/{inspection}/questions/{question}/answers": {
+            "post": {
+                "tags": [
+                    "Respuestas"
+                ],
+                "summary": "Almacena una respuesta asociada a una inspección",
+                "operationId": "App\\Http\\Controllers\\Api\\Inspection\\InspectionQuestionAnswerController::store",
+                "parameters": [
+                    {
+                        "name": "inspection",
+                        "in": "path",
+                        "description": "Id de la inspección",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "Id de la pregunta",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "value": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Almacena una nueva respuesta asociado a una inspección, con una pregunta.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Entidad no procesable."
+                    },
+                    "401": {
+                        "description": "Usuario no autorizado."
                     }
                 },
                 "security": [
@@ -1585,8 +1690,16 @@
             "description": "Endpoints para el módulo de estados/departamentos"
         },
         {
+            "name": "Respuestas",
+            "description": "Endpoints para el módulo de respuestas"
+        },
+        {
             "name": "Inspecciones",
             "description": "Endpoints para el módulo de inspecciones"
+        },
+        {
+            "name": "Respuestas",
+            "description": "Endpoints para el módulo de respuestas"
         },
         {
             "name": "Preguntas",
